--- a/wwwroot/En/PageMaster.master
+++ b/wwwroot/En/PageMaster.master
@@ -236,8 +236,8 @@
 <li><a href="sports-law.aspx" title="Sports Law">Sports Law</a></li>   
 <li><a href="commercial-and-residential-leases.aspx" title="Residential and Commercial Property">Residential and Commercial Property</a></li>								
 <li><a href="wills-probate-trusts.aspx" title="Wills, Probate and Trusts">Wills, Probate and Trusts</a></li>								
-<li><a href="housing_disrepair.aspx" title="Housing Disrepair">Housing Disrepair</a></li>
-<li><a href="driving-difence.aspx" title="Driving Difence">Driving Difence</a></li>
+<li><a href="housing_disrepair.aspx" title="Housing Disrepair">Housing Disrepair</a></li> 
+                                     <li><a href="driving-difence.aspx" title="Motor Offences">Motor Offences</a></li>
                              </ul>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                         <li><a href="wills-probate-trusts.aspx" title="Wills, Probate and Trusts" >Wills, Probate and Trusts</a></li>                           
                         <li><a href="employment.aspx" title="Employment">Employment</a></li>								
 						<li><a href="housing_disrepair.aspx" title="Housing Disrepair">Housing Disrepair</a></li> 
-                        <li><a href="driving-difence.aspx" title="Driving Difence">Driving Difence</a></li>                      
+                           <li><a href="driving-difence.aspx" title="Motor Offences">Motor Offences</a></li>           
                         <li><a href ="faq.aspx" title ="FAQ">FAQ</a></li>		
 					</ul> 
 					
