--- a/wwwroot/En/css/style.css
+++ b/wwwroot/En/css/style.css
@@ -2470,3 +2470,9 @@ margin: 0px;
 		ul#ultag li { margin:05px 0 0 0}
 		ul#ultag li a { color:#067dba; font-size:14px;}
 		ul#ultag li a:hover { color:#000; margin-left:05px; text-decoration:underline;}
+
+        .listspacing1 li
+        {
+            line-height: 2;
+        }
+     
