--- a/wwwroot/En/Admin_Master.master
+++ b/wwwroot/En/Admin_Master.master
@@ -67,6 +67,17 @@ javascript:history.forward(1);
 
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88835329-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 
@@ -160,7 +171,7 @@ javascript:history.forward(1);
                                  <li><a href="commercial-and-residential-leases.aspx" title="Residential and Commercial Property">Residential and Commercial Property</a></li>								
                                  <li><a href="debt-recovery.aspx" title="Debt Recovery">Debt Recovery</a></li>
                                  <li><a href="consignment.aspx" title="Consignment"> Consignment</a></li> 
-                                 <li><a href="driving-difence.aspx" title="Motor Offences">Motor Offences</a></li>>                
+                                 <li><a href="driving-difence.aspx" title="Driving Defences">Driving Defences</a></li>>                
 					</ul> 
 					
                 </div>
